1) Added Local Storage for saving words, 2) Added onBlur for input 3) Divide  screen on 2 parts( flexbox used)

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -20,3 +20,8 @@
 .button:hover{
     background-color:rgba(24, 205, 77, 0.7);
 }
+
+.button:disabled{
+    background-color:rgba(24, 205, 77, 0.5);
+    cursor: not-allowed;
+}
