--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -9,4 +9,5 @@
     -moz-box-shadow: 0 1px 1px #ccc inset, 0 1px 0 #fff;
     -webkit-box-shadow: 0 1px 1px #ccc inset, 0 1px 0 #fff;
     box-shadow: 0 1px 1px #ccc inset, 0 1px 0 #fff;
+    font-size: 20px;
 }
