--- a/src/pages/AdminPanel/adminPanel.css
+++ b/src/pages/AdminPanel/adminPanel.css
@@ -1,10 +1,34 @@
 .wordCollectionHeader{
+
     margin-top: 50px;
 }
 
+.flexContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+}
+
+.inputWrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 50%;
+}
+
+
+
 .wordCollectionWrap{
-    border: 1px solid black;
-    border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+
+    border-right: 1px solid black;
+    /*border-radius: 3px;*/
     margin-top: 10px;
     text-align: center;
 }
@@ -35,5 +59,7 @@ z-index: 100;
     width: 10px;
     height: 10px;
 }
+
+
 
 
