--- a/src/pages/AdminPanel/adminPanel.css
+++ b/src/pages/AdminPanel/adminPanel.css
@@ -38,26 +38,36 @@
     padding: 5px 10px;
     font-size: 32px;
     display: inline-block;
-    /*border: 1px solid black;
-    border-radius: 2px;*/
     text-align: center;
+    overflow: hidden;
+
 }
 
 .greeting{
     text-align: center;
 }
 
-.imgCloseWrap{
-z-index: 100;
-}
+
 .closeImg{
-    position: relative;
-    margin: 0;
-    padding: 0;
-    top: 0;
-    right: 0;
-    width: 10px;
-    height: 10px;
+    width: 30px;
+    height: 30px;
+   margin: auto 20px;
+    align-self: flex-end;
+    visibility: hidden;
+}
+
+.showDelBtn{
+    visibility: visible;
+}
+
+
+.wordWrapper{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    align-content: space-between;
 }
 
 
