--- a/src/pages/AdminLogin/adminLogin.css
+++ b/src/pages/AdminLogin/adminLogin.css
@@ -1,13 +1,27 @@
-.inputStyle {
-    padding: 15px 15px 15px 30px;
-    margin: 0 0 10px 0;
-    width: 353px; /* 353 + 2 + 45 = 400 */
-    border: 1px solid #ccc;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    -moz-box-shadow: 0 1px 1px #ccc inset, 0 1px 0 #fff;
-    -webkit-box-shadow: 0 1px 1px #ccc inset, 0 1px 0 #fff;
-    box-shadow: 0 1px 1px #ccc inset, 0 1px 0 #fff;
+.wrapper{
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 200px;
 }
 
+.form{
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
+.inputNames{
+    margin: 3px 5px;
+}
+
+.submitBtn{
+    width: 100px;
+    align-self: flex-start;
+}
