1) Add validation to Registration form 2) Validation to login form 3) Added FB&Gmail icon 4) Add error messages

--- a/src/pages/AdminLogin/adminLogin.css
+++ b/src/pages/AdminLogin/adminLogin.css
@@ -22,6 +22,19 @@
 }
 
 .submitBtn{
-    width: 100px;
-    align-self: flex-start;
+    display: flex;
+    justify-content: space-between;
+}
+
+.socialNetwork{
+    align-self: center;
+
+
+}
+
+.socialImg{
+    width: 30px;
+    height: 30px;
+    margin: 2px;
+
 }
