--- a/src/pages/Registration/registration.css
+++ b/src/pages/Registration/registration.css
@@ -56,3 +56,24 @@
     border: 1px solid red;
     outline: none;
 }
+
+.errorMessage{
+    color:red;
+    font-size: 12px;
+}
+
+.hide{
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
