--- a/src/pages/WordConstruct/wordConstruct.css
+++ b/src/pages/WordConstruct/wordConstruct.css
@@ -1,5 +1,5 @@
 .wrapper {
-    margin-top: 200px;
+    margin-top: 80px;
     text-align: center;
 }
 
@@ -20,5 +20,17 @@ margin-bottom: 50px;
 
 
 .greeting{
+    margin-top: 30px;
     text-align: center;
+}
+
+.progressLineWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.progressLine{
+    width: 50%;
+    margin-top: 15px;
 }
